Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Peter McCluskey (Apr 9 2001)
  - add new options: deleted, expires, delete_msgnum, delete_level
  - togdbm args: fix misuse of secs_to_iso which made
      email->date == email->fromdate
  - fix subdir bug with thread_file_depth
  - fix threading bugs with linkquotes
  - fixreplyheader with linkquotes bugs fixed

Peter McCluskey (Apr 6 2001)
  - patch from Hisashi Gotoh <gotoh@horae.dti.ne.jp> adding iso2022jp option
    and fixing bug when config file not found.

Peter McCluskey (Apr 5 2001)
  - fixed faulty urls in thread index files in subdirs with folder_by_date,
    msgsperfolder

Peter McCluskey (Apr 3 2001)
  - changed htmlfilename, articlehtmlfilename to allocate mem dynamically.
  - redid config section of hypermail.html to describe some of the most
    important options and refer to hmrc.html for a full description.
    Changed style of hmrc.html, added folder_by_date mention to
    hypermail-faq.html.
  - fixed typo in FILES.

Peter McCluskey (Mar 31 2001)
  - fixed core dump with showhtml=2 created by yesterday's checkin.
  - added isodate, gmtime options.
  - bug fixes to mime decoding and to libcgi/form_ent.c from
    Greg Shenaut <greg@bogslab.ucdavis.edu>
  - add fixhtime.pl (changes timestamps to match From:)

Peter McCluskey (Mar 30 2001)
  - Reorganized hmrc.html.
  - Add options to split archive into subdirectories:
    folder_by_date
    msgsperfolder
    latest_folder
    describe_folder
    avoid_top_indices

Peter McCluskey (Mar 22 2001)
  - Enabled attachments index file, added sublists of attachment
   names and file sizes.

Peter McCluskey (Mar 22 2001)
  - Fixed problem with GDBM defines.
  - Improved speed by replacing O(N^2) code in these functions with
   code that is at least typically close to O(N):
      addreply, crossindexthread1, crossindexthread2, nextinthread,
      writearticles (if set_showreplies)